--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>springcloud-eureka-7003</module>
         <module>springcloud-provider-dept-8002</module>
         <module>springcloud-provider-dept-8003</module>
+        <module>springcloud-consumer-dept-fegin</module>
     </modules>
 
     <!-- 打包方式 pom-->
