添加了hystrix流监控功能,创建dashboard项目，在8001的启动项中加如注解和@Bean,8001中需要加监控的pom

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>springcloud-provider-dept-8003</module>
         <module>springcloud-consumer-dept-fegin</module>
         <module>springcloud-provider-dept-hystrix-8001</module>
+        <module>springcloud-consumer-hystrix-dashboard</module>
     </modules>
 
     <!-- 打包方式 pom-->
