--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <module>springcloud-consumer-dept-fegin</module>
         <module>springcloud-provider-dept-hystrix-8001</module>
         <module>springcloud-consumer-hystrix-dashboard</module>
+        <module>springcloud-zuul</module>
+        <module>springcloud-zuul-9527</module>
     </modules>
 
     <!-- 打包方式 pom-->
