--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
         <module>springcloud-consumer-hystrix-dashboard</module>
         <module>springcloud-zuul</module>
         <module>springcloud-zuul-9527</module>
+        <module>springcloud-config-server-3344</module>
+        <module>springcloud-config-server-3344</module>
+        <module>springcloud-config-client-3355</module>
     </modules>
 
     <!-- 打包方式 pom-->
