--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
         <module>springcloud-config-server-3344</module>
         <module>springcloud-config-server-3344</module>
         <module>springcloud-config-client-3355</module>
+        <module>springcloud-config-eureka-7001</module>
+        <module>springcloud-config-dept-8001</module>
+        <module>springcloud-config-eureka-7001</module>
     </modules>
 
     <!-- 打包方式 pom-->
